fix(PoweredBy): use correct svg (algolia/instantsearch-specs#54)
* fix(PoweredBy): use correct svgNote that this is a breaking change because they don't have `width: 70px` since that's way too smallAlso adds the svg for dark backgrounds with `.ais-PoweredBy--dark` (or should it be `--light`, slightly confused :p)

* chore: new logos

--- a/packages/instantsearch-specs/src/scss/site/base.scss
+++ b/packages/instantsearch-specs/src/scss/site/base.scss
@@ -234,6 +234,7 @@ body {
   padding: 20px;
   border: 1px solid #ddd;
   overflow: auto;
+  transition: .2s background-color ease-in-out;
 }
 
 .code-output code {
@@ -327,4 +328,9 @@ body {
   &:active {
     border: 1px solid black;
   }
+}
+
+.dark {
+  background-color: $dark;
+  color: white;
 }
